--- a/prisoners_dilemma/game.ipynb
+++ b/prisoners_dilemma/game.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'prisoners_dilemma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprisoners_dilemma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bots\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprisoners_dilemma\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgame\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m prisoners_dilemma, define_players\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'prisoners_dilemma'"
+     ]
+    }
+   ],
    "source": [
-    "from game import prisoners_dilemna\n",
-    "# import numpy as np\n",
-    "from inspect import isfunction\n",
-    "import bots\n",
-    "list_of_players = [getattr(bots, item) for item in dir(bots) \n",
-    "                   if isfunction(getattr(bots, item))]"
+    "from prisoners_dilemma import bots\n",
+    "from prisoners_dilemma.game import prisoners_dilemma, define_players"
    ]
   },
   {
@@ -49,33 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "x = (10)\n",
-    "field = np.zeros(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "field"
+    "print(prisoners_dilemma(list_of_players).matchup(tit_for_tat, always_cooperate))"
    ]
   },
   {
