Internal Demo fix. (Missed a file on last commit)

--- a/prisoners_dilemma/game.ipynb
+++ b/prisoners_dilemma/game.ipynb
@@ -2,66 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'prisoners_dilemma'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprisoners_dilemma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bots\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprisoners_dilemma\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgame\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m prisoners_dilemma, define_players\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'prisoners_dilemma'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prisoners_dilemma import bots\n",
-    "from prisoners_dilemma.game import prisoners_dilemma, define_players"
+    "from prisoners_dilemma.game import dilemma_tournament, define_players\n",
+    "from bots import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "always_cooperate: 891\n",
-      "always_defect: 912\n",
-      "grudge: 1481\n",
-      "random: 626\n",
-      "tester: 888\n",
-      "tit_for_tat: 1374\n",
-      "weighted_guess: 1336\n"
+      "always_cooperate: 944\n",
+      "always_defect: 888\n",
+      "grudge: 1361\n",
+      "random: 630\n",
+      "tester: 906\n",
+      "tit_for_tat: 1316\n",
+      "weighted_guess: 1425\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<game.prisoners_dilemna at 0x7fab497c8310>"
+       "<prisoners_dilemma.game.game.dilemma_tournament at 0x7fcdf91da580>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prisoners_dilemna(list_of_players).tournament()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(prisoners_dilemma(list_of_players).matchup(tit_for_tat, always_cooperate))"
+    "list_of_players = define_players()\n",
+    "dilemma_tournament(list_of_players).tournament()"
    ]
   },
   {
